configure FileDataService bean
- create FileDataServiceConfig class
- add parameters to JVM on build.gradle to include modules
- add spring.core to module requirements
- create .gitignore to exclude generated /data folder