@@ -23,7 +23,7 @@ dependencies {
 
     runtimeOnly 'com.h2database:h2'
 
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -33,6 +33,11 @@ dependencies {
 
 bootRun {
     mainClass = "com.github.igorpadilha980.filearchiver.rest.FileArchiverRest"
+
+    jvmArgs += [
+            "--module-path=${classpath.asPath}",
+            "--add-modules=filearchiver.data.filesystem"
+    ]
 }
 
 tasks.named('test') {
